--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
+    "body-parser": "^1.19.0",
     "nodemon": "^2.0.4"
   }
 }
